--- a/css/base.css
+++ b/css/base.css
@@ -1,219 +1,193 @@
-/*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=e096b19f01c3412d4d86)
- * Config saved to config.json and https://gist.github.com/e096b19f01c3412d4d86
- */
-
-
-/*!
- * Bootstrap v3.3.6 (http://getbootstrap.com)
- * Copyright 2011-2015 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
-
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-
 html {
-	font-family: "Roboto Mono";
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%
+font-family:"Roboto Mono",monospace;
+-ms-text-size-adjust:100%;
+-webkit-text-size-adjust:100%;
+font-size:10px;
+-webkit-tap-highlight-color:rgba(0,0,0,0)
 }
 
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box
+-webkit-box-sizing:border-box;
+-moz-box-sizing:border-box;
+box-sizing:border-box
 }
 
-*:before,
-*:after {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box
-}
-
-html {
-	font-size: 10px;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+:before,:after {
+-webkit-box-sizing:border-box;
+-moz-box-sizing:border-box;
+box-sizing:border-box
 }
 
 body {
-	font-family: "Roboto Mono";
-	font-size: 14px;
-	line-height: 1.42857143;
-	color: #CCCCCC;
-	background-color: #000
+font-family:"Roboto Mono",monospace;
+font-size:14px;
+line-height:1.42857143;
+color:#CCC;
+background-color:#000;
+margin-bottom:20px
 }
 
 p {
-	margin: 0 0 10px
+margin:0 0 10px
 }
 
 body {
-	background-color: #000;
-	font-size: 20px;
-	margin-bottom: 20px;
-	font-family: "Roboto Mono", monospace;
+background-color:#000;
+font-size:20px;
+margin-bottom:20px;
+font-family:"Roboto Mono",monospace
 }
 
 .h {
-	border-bottom: 5px dotted #2C37BF;
-	text-align: center;
-	padding: 2em 0;
-	margin-bottom: 2em;
+border-bottom:5px dotted #2C37BF;
+text-align:center;
+padding:2em 0;
+margin-bottom:2em
 }
 
 .h p {
-	color: #999;
-	letter-spacing: 1px;
+color:#999;
+letter-spacing:1px
 }
 
-p,
-li {
-	line-height: 160% !important;
+p,li {
+line-height:160%!important
 }
 
 img {
-	border: 0
+border:0;
+page-break-inside:avoid;
+max-width:100%!important
 }
-img {
-  page-break-inside: avoid
+
+.thumbnail>img,.thumbnail a>img {
+margin-left:auto;
+margin-right:auto
 }
-img {
-  max-width: 100% !important
-}
-.thumbnail>img,
-.thumbnail a>img {
-	margin-left: auto;
-	margin-right: auto
-}
+
 .media-object.img-thumbnail {
-	max-width: none
-}
-img {
-	vertical-align: middle
+max-width:none
 }
 
-.img-responsive,
-.thumbnail>img,
-.thumbnail a>img {
-	display: block;
-	max-width: 100%;
-	height: auto
+img {
+vertical-align:middle
+}
+
+.img-responsive,.thumbnail>img,.thumbnail a>img {
+display:block;
+max-width:100%;
+height:auto
 }
 
 .img-rounded {
-	border-radius: 6px
+border-radius:6px
 }
 
 .img-thumbnail {
-	padding: 4px;
-	line-height: 1.42857143;
-	background-color: #fff;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	-webkit-transition: all .2s ease-in-out;
-	-o-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
-	display: inline-block;
-	max-width: 100%;
-	height: auto
+padding:4px;
+line-height:1.42857143;
+background-color:#fff;
+border:1px solid #ddd;
+border-radius:4px;
+-webkit-transition:all .2s ease-in-out;
+-o-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+display:inline-block;
+max-width:100%;
+height:auto
 }
 
 .img-circle {
-	border-radius: 50%
+border-radius:50%
 }
+
 .media-object.img-thumbnail {
-	max-width: none
+max-width:none
 }
+
 .assist {
-	display: none;
+display:none
 }
+
 a {
-	color: #2C80BF  ;
-	text-decoration: none
+color:#2C80BF;
+text-decoration:none
 }
+
 sup {
-	font-size: 75%;
-	line-height: 1;
-	position: relative;
-	vertical-align: baseline
+font-size:75%;
+line-height:1;
+position:relative;
+vertical-align:baseline
 }
+
 input {
-	line-height: normal
+line-height:normal
 }
 
-
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-	font-family: inherit;
-	font-weight: 500;
-	line-height: 1.1;
-	color: #CCCCCC
+h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
+font-family:inherit;
+font-weight:500;
+line-height:1.1;
+color:#CCC
 }
+
 .lead {
-	margin-bottom: 20px;
-	font-size: 16px;
-	font-weight: 300;
-	line-height: 1.4
+margin-bottom:20px;
+font-size:16px;
+font-weight:300;
+line-height:1.4
 }
 
 output {
-	display: block;
-	padding-top: 7px;
-	font-size: 14px;
-	line-height: 1.42857143;
-	color: #555
+display:block;
+padding-top:7px;
+font-size:14px;
+line-height:1.42857143;
+color:#555
 }
-p,
-li {
-	line-height: 160% !important;
+
+p,li {
+line-height:160%!important
 }
+
 .jumbotron p {
-	margin-bottom: 15px;
-	font-size: 21px;
-	font-weight: 200
+margin-bottom:15px;
+font-size:21px;
+font-weight:200
 }
+
 .alert>p+p {
-	margin-top: 5px
+margin-top:5px
 }
 
 body {
-	margin: 0
+margin:0
 }
+
 textarea {
-	font-family: inherit;
-	font-size: inherit;
-	line-height: inherit
+font-family:inherit;
+font-size:inherit;
+line-height:inherit
 }
+
 .main {
-	padding-bottom: 2em;
+padding-bottom:2em
 }
 
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+position:absolute;
+top:50%;
+left:50%;
+-moz-transform:translateX(-50%) translateY(-50%);
+-webkit-transform:translateX(-50%) translateY(-50%);
+transform:translateX(-50%) translateY(-50%)
 }
 
-.vertical-center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-100%);
-  transform: translateY(-50%);
+#rcorners1 {
+border-radius:25px;
+background:#73AD21;
+padding:20px;
+width:200px;
+height:150px
 }
