Added CV to website, improved the way the icons are done.

--- a/css/base.css
+++ b/css/base.css
@@ -121,3 +121,7 @@ left:50%;
 -webkit-transform:translateX(-50%) translateY(-50%);
 transform:translateX(-50%) translateY(-50%)
 }
+
+.iconLink {
+    color:white;
+}
